crates/compiler/test_syntax/tests/snapshots/pass/where_clause_multiple_has.expr.formattedmigrate.roc
f : a -> (b -> c) where a implements A, b implements Eq, c implements Ord

f