crates/compiler/test_syntax/tests/snapshots/fail/ability_demand_value_has_args.expr.roc
MEq implements
    eq b c : a, a -> U64 where a implements MEq

1
